syntax = "proto3" ;
package chunk ;
option go_package = "dfs/chunkpb";
message ChunkData{
	string chunk_id = 1 ;
	bytes data = 2 ;
	int32 seq_no = 3 ;
	uint32 checksum = 4 ;
}

message DownloadChunkRequest{
	string chunk_id = 1 ;
}

message UploadChunkStatus{
	bool success = 1 ;
}

service ChunkService {
	rpc UploadChunk ( stream ChunkData ) returns ( UploadChunkStatus ) ;
	rpc DownloadChunk ( DownloadChunkRequest ) returns ( stream ChunkData ) ;
}


